# GeneratePDF

./: README.md  pyproject.toml
src/pdf_generator/: __init__.py  builder.py  cli.py  layout.py  styles.py  tables.py
